@@ -38,6 +38,7 @@
  * #1052 (The Dirichlet and Normal distributions only have 1D graphics in the doc)
  * #1229 (Better encapsulation of optional 3rd-party headers)
  * #1257 (Cannot create a SimulatedAnnealingLHS without specifying the temperature profile)
+ * #1287 (The constructors of KernelSmoothing have no doc)
  * #1425 (There is no method to create a train / test pair)
  * #1431 (The figure for LHSExperiment is not accurate)
  * #1459 (There is no example which shows how to set a column of a Sample)
